--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
           dodger.style.left = ${left - 1} px
         }
       }
+      function moveDodgerRight() {
+        var rightNumbers = 
+        dodger.style.right.replace('px','')
+        var right = parseInt(rightNumbers, 10)
+        if(right > 0) {
+          dodger.style.right = ${left - 1} px
+        }
+      }
       document.addEventListener('keydown', function(e) {
         if(e.which === 37) {
           moveDodgerLeft()
